--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ Flask==2.3.2
 flask-socketio==5.3.3
 eventlet==0.33.3
 gunicorn==21.2.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.4
+Flask-WTF==1.0.1
+Flask-Login==0.6.2
